--- a/src/App.css
+++ b/src/App.css
@@ -171,3 +171,19 @@ img {
   display: inline-flex;
   align-items: center;
 }
+
+
+/* =====================BREAKPOINTS===================== */
+@media screen and (max-width:992px) {
+  .container{
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+  }
+}
+
+@media screen and (max-width:350px) {
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+}
