--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,11 @@
   --hue:0;
   --sat:0;
   --title-color: hsl(var(--hue), var(--sat), 30%);
-  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
+  --title-color-dark: #00008B;
   --text-color: hsl(var(--hue), var(--sat), 46%);
-  --body-color: hsl(var(--hue), var(--sat), 98%);
-  --container-color: #fff;
+  --body-color: #ADD8E6;
+  --container-color:#fff;
+  --dark-bg: #000000;
 
   /* ===============Fonts and Typography=========*/
   --body-font: "Poppins", sans-serif;
@@ -106,6 +107,7 @@ button{
   cursor: pointer;
   border: none;
   outline: none;
+  
 }
 
 img {
@@ -152,7 +154,7 @@ img {
 /* =====================BUTTONS================== */
 .button{
   display: inline-block;
-  background-color: var(--title-color);
+  background-color: var(--dark-bg);
   color: var(--container-color);
   padding: 1.25rem 2rem;
   border-radius: 1rem;
@@ -161,6 +163,8 @@ img {
 
 .button:hover {
   background-color: var(--title-color-dark);
+  /* border: 2px solid var(--dark-bg); */
+  color: var(--container-color);
 }
 
 .button__icon {
