--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -45,7 +45,7 @@
 
 .home__description {
     max-width: 400px;
-    /* margin-bottom: var(--mb-1); */
+    margin-bottom: var(--mb-2-5);
 }
 
 .home__img {
@@ -53,7 +53,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(255, 255, 255 / 30%);
+    box-shadow: inset 0 0 0 9px #00008B;
     order: 1;
     justify-self: center;
     width: 300px;
