--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 /* ===============Responsiveness============= */
 @media screen and (max-width:992px) {
   :root{
-    --big-font-size: 2.75rem;
+    --big-font-size: 2.25rem;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
     --h3-font-size: 1rem;
@@ -182,6 +182,20 @@ img {
   .container{
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
+  }
+
+  .button {
+    padding: 1rem 1.5rem;
+  }
+  .button__icon {
+    width: 22px;
+    height: 22px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .section {
+    padding: 2rem 0 4rem;
   }
 }
 
