--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,6 @@
+.home__container {
+    row-gap: 7rem;
+}
 .home__content {
     grid-template-columns: 116px repeat(2, 1fr);
     align-items: center;
@@ -74,3 +77,70 @@
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
 }
+
+ .home__scroll {
+    margin-left: 9rem;
+}
+
+.home__scroll-name {
+    color: var(--title-color-dark) ;
+    font-weight: var(--font-normal) ;
+    /* margin-right: ; */
+    margin-left: 2px;
+}
+
+/* =====================BREAKPOINTS===================== */
+@media screen and (max-width:992px) {
+    .home__content {
+        grid-template-columns: 100px repeat(2. 1fr);
+        column-gap: 1.25rem;
+    }
+    .home__subtitle {
+        padding-left: 3.75rem;
+        margin-bottom: var(--mb-1);
+    }
+    .home__subtitle::before {
+        width: 42px;
+        top: 0.8rem;
+    }
+    .home__description{
+        max-width: initial;
+        margin-bottom: var(--mb-2-5);
+    }
+    .home__img {
+        width: 250px;
+        height: 250px;
+        box-shadow: inset 0 0 0 8px #00008B;
+    }
+    .home__scroll {
+        margin-left: 8.5rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .home__content {
+        grid-template-columns: 0.5fr 3fr;
+        padding-top: 3.5rem;
+    }
+    .home__img{
+        order: initial;
+        justify-self: initial;
+        width: 200px;
+        height: 200px;
+        box-shadow: inset 0 0 0 6px #00008B;
+        
+    }
+    .home__data {
+        grid-column: 1/3;
+    }
+    .home__scroll {
+        display: none;
+    }
+  }
+  
+  @media screen and (max-width:350px) {
+    .home__img {
+        width: 180px;
+        height: 180px;
+    }
+  }
