--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,7 @@ img {
   padding: 1.25rem 2rem;
   border-radius: 1rem;
   font-weight: var(--font-medium);
+  margin-top: 20px;
 }
 
 .button:hover {
@@ -194,8 +195,16 @@ img {
 }
 
 @media screen and (max-width:768px) {
+  body {
+    margin: 0 0 var(--header-height ) 0;
+  }
+  
   .section {
     padding: 2rem 0 4rem;
+  }
+
+  .section__subtitle {
+    margin-bottom: var(--mb-3);
   }
 }
 
