--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -58,7 +58,7 @@
 }
 
 .home__img {
-    background: url(../../assets/profile.jpg);
+    background: url(../../assets/quams.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
